--- a/VietNamToGo/ProfileImageCell.xib
+++ b/VietNamToGo/ProfileImageCell.xib
@@ -3,27 +3,32 @@
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <mutableArray key="Roboto-Regular.ttf">
+            <string>Roboto-Regular</string>
+        </mutableArray>
+    </customFonts>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="120" id="0vm-PS-Rpu" customClass="ProfileImageCell" customModule="FUOTTests" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="120"/>
+        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="200" id="0vm-PS-Rpu" customClass="ProfileImageCell" customModule="FUOTTests" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="200"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="0vm-PS-Rpu" id="2zz-cL-fth">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="119.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="199.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="9XG-zi-0bK">
-                        <rect key="frame" x="120" y="10" width="80" height="80"/>
+                        <rect key="frame" x="85" y="10" width="150" height="150"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="80" id="0v0-g9-ulb"/>
-                            <constraint firstAttribute="width" constant="80" id="B2l-99-9yp"/>
+                            <constraint firstAttribute="height" constant="150" id="0v0-g9-ulb"/>
+                            <constraint firstAttribute="width" constant="150" id="B2l-99-9yp"/>
                         </constraints>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kdA-ET-WFO">
-                        <rect key="frame" x="141" y="95" width="40" height="18"/>
-                        <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
-                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kdA-ET-WFO">
+                        <rect key="frame" x="145.5" y="165" width="29" height="14.5"/>
+                        <fontDescription key="fontDescription" name="Roboto-Regular" family="Roboto" pointSize="12"/>
+                        <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
@@ -38,7 +43,7 @@
                 <outlet property="iconView" destination="9XG-zi-0bK" id="1Ey-Rh-GC7"/>
                 <outlet property="titleLabel" destination="kdA-ET-WFO" id="eGb-7n-DX8"/>
             </connections>
-            <point key="canvasLocation" x="925" y="296"/>
+            <point key="canvasLocation" x="925" y="336"/>
         </tableViewCell>
     </objects>
 </document>
